# plant-tracker

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
plant_tracker/: db.py  db_mongo.py  main.py
src/plant_tracker/: __main__.py  common.py
src/plant_tracker/db/: __init__.py  db.py  mongo.py
src/plant_tracker/identifier/: identifier.py
src/plant_tracker/ui/: ui.py
tests/: test_main.py
